# hx711-multi

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: build_and_upload.yml  publish-to-test-pypi.yml  python-publish.yml  stale.yml
hx711/: hx711.py  utils.py
src/hx711_multi/: __init__.py  hx711.py  utils.py
tests/: calibrate.py  raw_gpio.py  simple_read_test.py  simple_read_test_external_mcp.py  unit_tests.py
