# https://packaging.python.org/tutorials/packaging-projects/
# Command to publish to PyPi
# python3 -m build; python3 -m twine upload dist/*

# auto-publish:
# https://packaging.python.org/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows/

[metadata]
name = hx711_multi
version = 1.3.1
author = James Morris
author_email = jemorris55@gmail.com
description = HX711 class to sample 24-bit ADCs with Python 3 on a Raspberry Pi Rasperry Pi Zero, 2 or 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Morrious/hx711-multi
project_urls =
    Bug Tracker = https://github.com/Morrious/hx711-multi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src